# C101

./: CMakeLists.txt  Makefile  Makemakefile  readme.md  sample.lua
include/: c101_Company.h  c101_Cut.h  c101_Parsing.h  c101_Print.h  c101_Subunit.h  c101_Total.h  c101_Unparsing.h  c101_Util.h  c101_Vector.h  c101_Visit.h
lua/: parsing.lua
presentation/: c101.tex
src/: c101_Company.c  c101_Cut.c  c101_Depth.c  c101_Median.c  c101_Parsing.c  c101_Print.c  c101_Subunit.c  c101_Test.c  c101_Total.c  c101_Unparsing.c  c101_Util.c  c101_Vector.c  c101_Visit.c  main.c
test/: parsingTest.c
